add ultra thin font

--- a/src/assets/fonts/style.css
+++ b/src/assets/fonts/style.css
@@ -31,7 +31,7 @@
 @font-face {
   font-family: 'Monument Extended Regular';
   src: local('Monument Extended Regular'), local('Monument-Extended-Regular'),
-    url('MonumentExtended-Regular.otf') format('openType');
+    url('MonumentExtended-Ultralight.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
